# sqlitewrap

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  sqlitewrap.hpp
test/: csv_to_db.cpp  test.csv
tutorial/: tutorial.sql
